--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "antd": "^4.20.5",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "8.15.0",
